--- a/contact.html
+++ b/contact.html
@@ -91,7 +91,7 @@
 				  </div></div>
                   <div class="address address-cnt"><i class="fa fa-map-marker"></i> 26 Rue 100 Passage Mimousa AV. Idriss II Meknès - Maroc</div>
                   <div class="call address-cnt"><i class="fa fa-phone"></i><b>+212 (0) 661 876 074</b></div>
-                  <div class="mail address-cnt"><i class="fa fa-envelope"></i>volubiliscar@gmail.com</div>
+                  <div class="mail address-cnt"><i class="fa fa-envelope"></i>support@volubiliscar.info</div>
                 </div>
               </div>
 
