--- a/index.html
+++ b/index.html
@@ -4,6 +4,14 @@
 <!-- Mirrored from volubiliscar.com/ by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 04 Jun 2025 12:29:21 GMT -->
 <head>
       <!-- PAGE TITLE -->
+
+	<!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-5SK5HDGV');</script>
+<!-- End Google Tag Manager -->
       <title>Volubilis car - location de voiture aéroport de fès</title>
 
       <!-- META-DATA -->
@@ -32,7 +40,10 @@
 
   </head>
   <body>
-     
+     <!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-5SK5HDGV"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
       <div class="r-wrapper">
         <header>
           <div class="r-header r-header-inner r-header-strip-02">
