--- a/index.html
+++ b/index.html
@@ -12,6 +12,16 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
 })(window,document,'script','dataLayer','GTM-5SK5HDGV');</script>
 <!-- End Google Tag Manager -->
+
+	<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-EB0J9TBNCN"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-EB0J9TBNCN');
+</script>
       <title>Volubilis car - location de voiture aéroport de fès</title>
 
       <!-- META-DATA -->
